# Image-Classifier

./: README.md  build-exe.ps1  main.py  pyproject.toml
